tests/negative_tests/syntax_errors/unmatched_braces.c
// INVALID - Syntax Error: unmatched closing brace
int main() {
    int x;
    x = 5;
}}  // ERROR: extra closing brace
